Better fix for problem with URLs in CPE descriptor <include> elements, apparently introduced in adding support for imports. UIMA-343: https://issues.apache.org/jira/browse/UIMA-343
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@519162 13f79535-47bb-0310-9956-ffa450edef68